POPPY-16 Added OMDb API integration

--- a/backend/PoppyAI/src/main/resources/application.properties
+++ b/backend/PoppyAI/src/main/resources/application.properties
@@ -5,3 +5,21 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+omdb.api.key=8f3b9c3c
+spring.security.user.name=admin
+spring.security.user.password=admin
