POPPY-30 sukurtas ai question algoritmas backendui

--- a/backend/PoppyAI/src/main/resources/application.properties
+++ b/backend/PoppyAI/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+deepseek.api.key=sk-8cef869cb1264192a8fb7bf9bf35a657
+deepseek.api.url=https://api.deepseek.com/v1/chat/completions
+deepseek.model=deepseek-chat
+spring.main.web-application-type=none
