--- a/backend/PoppyAI/src/main/resources/application.properties
+++ b/backend/PoppyAI/src/main/resources/application.properties
@@ -14,4 +14,8 @@ spring.jpa.properties.hibernate.format_sql=true
 deepseek.api.key=sk-8cef869cb1264192a8fb7bf9bf35a657
 deepseek.api.url=https://api.deepseek.com/v1/chat/completions
 deepseek.model=deepseek-chat
-spring.main.web-application-type=none
+spring.mvc.cors.allowed-origins=http://localhost:3000
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.mvc.cors.allowed-headers=*
+spring.mvc.cors.allow-credentials=true
+server.port=8080
