--- a/.github/workflows/PipelineTomas.yml
+++ b/.github/workflows/PipelineTomas.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
-        working-directory: ./backend
+        working-directory: ./backend/PoppyAI
 
       - name: Run tests with Maven
         run: mvn test
-        working-directory: ./backend
+        working-directory: ./backend/PoppyAI
