--- a/.github/workflows/PipelineTomas.yml
+++ b/.github/workflows/PipelineTomas.yml
@@ -12,6 +12,21 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD:
+          MYSQL_DATABASE: movie_picker_db
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -21,6 +36,21 @@ jobs:
         with:
           distribution: temurin
           java-version: '17'
+
+      - name: Set Spring profile to test
+        run: echo "SPRING_PROFILES_ACTIVE=test" >> $GITHUB_ENV
+
+      - name: Wait for MySQL to be ready
+        run: |
+          for i in {1..30}; do
+            if mysqladmin ping -h mysql -P 3306 --silent; then
+              echo "MySQL is up"
+              exit 0
+            fi
+            echo "Waiting for MySQL..."
+            sleep 2
+          done
+          echo "MySQL did not become ready in time" && exit 1
 
       - name: Build with Maven
         run: mvn clean install
