--- a/.github/workflows/PipelineTomas.yml
+++ b/.github/workflows/PipelineTomas.yml
@@ -16,7 +16,7 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
-          MYSQL_ROOT_PASSWORD:
+          MYSQL_ROOT_PASSWORD: rootpass
           MYSQL_DATABASE: movie_picker_db
         ports:
           - 3306:3306
