--- a/backend/PoppyAI/src/main/resources/application-test.properties
+++ b/backend/PoppyAI/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
 spring.application.name=PoppyAI
-spring.datasource.url=jdbc:mysql://mysql:3306/movie_picker_db
+spring.datasource.url=jdbc:mysql://localhost:3306/movie_picker_db
 spring.datasource.username=root
 spring.datasource.password=rootpass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.format_sql=true
 deepseek.api.key=sk-8cef869cb1264192a8fb7bf9bf35a657
 deepseek.api.url=https://api.deepseek.com/v1/chat/completions
 deepseek.api.model=deepseek-chat
-spring.mvc.cors.allowed-origins=http://mysql:3000
+spring.mvc.cors.allowed-origins=http://localhost:3000
 spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
 spring.mvc.cors.allowed-headers=*
 spring.mvc.cors.allow-credentials=true
