--- a/.github/workflows/PipelineTomas.yml
+++ b/.github/workflows/PipelineTomas.yml
@@ -9,14 +9,37 @@ on:
       - featureTomas
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Build with Maven
+        run: mvn clean compile
+        
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+        path: ~/.m2
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+        
+  test:
+    needs: build
+    runs-on: ubuntu-latest
     services:
       mysql:
         image: mysql:8.0
         env:
-          MYSQL_ROOT_PASSWORD: rootpass
+          MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: movie_picker_db
         ports:
           - 3306:3306
@@ -24,26 +47,17 @@ jobs:
           --health-cmd="mysqladmin ping --silent"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=5
-
+          --health-retries=10
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Java 17
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: temurin
           java-version: '17'
-
-      - name: Set Spring profile to test
-        run: echo "SPRING_PROFILES_ACTIVE=test" >> $GITHUB_ENV
-
-
-      - name: Build with Maven
-        run: mvn clean install
-        working-directory: ./backend/PoppyAI
+          distribution: 'temurin'
 
       - name: Run tests with Maven
         run: mvn test
