--- a/.github/workflows/PipelineTomas.yml
+++ b/.github/workflows/PipelineTomas.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI Pipeline for featureTomas
 
 on:
   push:
@@ -23,6 +23,7 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean compile
+        working-directory: ./backend/PoppyAI
         
       - name: Cache Maven packages
         uses: actions/cache@v3
@@ -39,7 +40,7 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
-          MYSQL_ROOT_PASSWORD: root
+          MYSQL_ROOT_PASSWORD: rootpass
           MYSQL_DATABASE: movie_picker_db
         ports:
           - 3306:3306
